fix tech stack centered on mobile view

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   p {
     font-size: 16px;
   }
